--- a/01.md
+++ b/01.md
@@ -1,1 +1,11 @@
+#Obtenga el promedio de 3 numeros cualquiera.
+
+##Analisis 
+1. Poner un numero
+2. Poner el segundo numero
+3. Poner el tercer numero
+4. Sumar los numeros
+5. dividir la suma entre 3
+
+##DFD 
 
