--- a/02.md
+++ b/02.md
@@ -1,1 +1,14 @@
+#Obtener la edad de una persona
 
+##Analisis
+1. Preguntar el año de nacimiento
+2. Preguntar el año actual
+3. Restar el año actual con el el año de nacimiento
+
+##DFD 
+
+## Prueba de Escritorio
+an   | aa   |    aa-an     | 
+2002   2023   2023-2002=21
+1999   2023   2023-1999=24
+1997   2023   2023-1997=26
