--- a/03.md
+++ b/03.md
@@ -1,1 +1,13 @@
+# Obten la edad de una persona pero utilizando condiciones.
 
+## Analisis 
+1. Pedir el año de nacimiento
+2. Pedir el año actual
+3. Restar el año actual menos el de nacimiento
+
+## DFD
+
+an   | an>0 | aa   | aa>=an |    aa-an     | 
+2000   Si     2023   Si       2023-2000=23
+1985   Si     2023   Si       2023-1985=38
+2010   Si     2023   Si       2023-2010=13
