--- a/04.md
+++ b/04.md
@@ -1,1 +1,15 @@
+# Obtenga el promedio de n numeros obtenidos del teclado
 
+## Analisis
+1. Pedir los numeros
+2. Sumar los numeros
+3. Dividir la suma entre la cantidad de numeros
+4. Obtener el promedio
+
+## DFD
+
+## Prueba de Escritorio
+Poner n numeros | Sauma=n+n+n...+n | Suma/n
+1,2,3,4,5         Suma=1+2+3+4+5     15/3
+2,2,4,6,1         Suma=2+2+4+6+1     15/3
+5,6,9,10          Suma=5+6+9+10      30/4
