--- a/06.md
+++ b/06.md
@@ -1,1 +1,14 @@
+# Escriba un dfd que calcule el cuadrado de un numero positivo leido desde el teclado
 
+## Analisis
+1. Prenuntar un numero
+2. Elevar al cuadrado el numero
+3. Dar el resultado
+
+## DFD
+
+## Prueba de Escritorio
+n | n>0 | n*n | Resultado
+2   Si    2*2   4
+6   Si    6*6   36
+7   Si    7*7   49
