--- a/07.md
+++ b/07.md
@@ -1,1 +1,15 @@
+# Obtenga la suma de todos los cuadrados de los numeros pares entre 0 y 20 consertivos
 
+## Analisis
+1. Poner una condicion
+2. Un contador
+3. Multiplicar el contador por 2 para que me den numeros pares
+4. Usar un acumulador
+
+## DFD
+
+## Prueba de Escritorio
+C<=10 | C=C+1 | C*2=Par | S=S+Par
+Si      1        1*2=2     S=0+2
+Si      2        2*2=4     S=2+4
+Si      3        3*2=6     S=2+4+6
