--- a/13.md
+++ b/13.md
@@ -1,4 +1,14 @@
+# Preguntar un dia y asumir que dia de la semana es
 
+## Analisis
+1. Pedir un numero
+2. Hacer una bandera con los dias de la semana
 
  DFD
  ![15](https://github.com/ReneDanielRa/Fundamentos_de_Programacion/assets/145809866/39b982fc-7894-4c46-92e8-adbf56533936)
+
+## Prueba de Escritorio
+n | 7>=n<=1 | 1=Lunes | 2=Martes | 3=Miercoles | 4=Jueves | 5=Viernes | 6=Sabado | 7=Domingo
+3      Si                          Miercoles
+4      Si                                         Jueves
+7      Si                                                                          Domingo
