--- a/14.md
+++ b/14.md
@@ -1,5 +1,18 @@
+# La tienda "Branko" debe vender productos a n alumnos, ofrecen: tortas, tacos, hot dogs y pizzas, imprima los productos vendidos en total
 
-
+##Analisis
+1. Hcer un menu
+2. Preguntar cuantas personas son
+3. Hacer una bandera con las 4 comidas
+4. Usar un contador en cada una
+5. Sumar todos los contadores
+6. Resultado
 
 DFD
 ![16](https://github.com/ReneDanielRa/Fundamentos_de_Programacion/assets/145809866/5e9140d2-fc07-4369-9c01-05890dd35a54)
+
+## Prueba de Escritorio
+n | n>=1 | n | 1= Torta | 2=Tacos | 3=Hot Dogs | 4=Pizza | C1=C1+1 | C2=C2+1 | C3=C3+1 | C4=C4+1 | S=C1+C2+C3+C4 | S | 
+3    SI    1     Torta                                      C1=0+1
+           4                                      Pizza                                   C4=0+1
+           3                         Hot dog                                    C3=0+1              S=1+1+1         3
