--- a/15.md
+++ b/15.md
@@ -1,4 +1,18 @@
+# Crea el dfd del menu de una calculadora funcional que pueda sumar,restar,multiplicar, y dividir al seleccionar el tipo de operacion y dar 2 numeros
+
+## Analisis
+1. Poner un menu con las operaciones
+2. Pedir dos numeros
+3. Pedir el numero de la operacion
+4. Poner un proceso donde se realizen las diferentes operaciones
+5. Poner el resultado
 
 
 DFD
 ![17](https://github.com/ReneDanielRa/Fundamentos_de_Programacion/assets/145809866/d47929cd-d27e-405d-a8f1-7ffd6350e97a)
+
+## Prueba de Escritorio
+n | m | op | 1=n+m | 2=n-m | 3=n*m | 4=n/m | r | 
+3   4   1     3+4                            7
+5   5   3                    5*5             25
+4   10  2            4-10                    -6
